Fixed overflow issue

--- a/wwwroot/web-components/app-route/app-route.scss
+++ b/wwwroot/web-components/app-route/app-route.scss
@@ -6,6 +6,7 @@
 
     ::slotted(*) {
         flex: 1;
+        min-width: 0;
     }
 
     &:not(.active) {
